[gd_scene load_steps=7 format=3 uid="uid://dlhe3ju6x2aqs"]

[ext_resource type="Script" uid="uid://db3y3tra7wgxb" path="res://script/harpoon.gd" id="1_yxyyu"]
[ext_resource type="Texture2D" uid="uid://cm8y4kxsu0ks0" path="res://sprite/harpoon penceng.png" id="2_0v313"]
[ext_resource type="FontFile" uid="uid://dhjptftnmlyyv" path="res://Inknut_Antiqua/InknutAntiqua-Regular.ttf" id="3_0v313"]

[sub_resource type="Animation" id="Animation_0v313"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Harpoon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Harpoon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yxyyu"]
resource_name = "drop"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Harpoon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_hit"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Harpoon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_njfb7"]
_data = {
&"RESET": SubResource("Animation_0v313"),
&"drop": SubResource("Animation_yxyyu")
}

[node name="Harpoon" type="Node2D"]
script = ExtResource("1_yxyyu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_njfb7")
}

[node name="Harpoon" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_0v313")
hframes = 6

[node name="Hit_Label1" type="Label" parent="."]
visible = false
offset_top = -29.0
offset_right = 40.0
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0v313")
theme_override_font_sizes/font_size = 11
text = "HIT"

[node name="Hit_Label2" type="Label" parent="."]
visible = false
offset_left = 24.0
offset_top = -47.0
offset_right = 37.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0v313")
theme_override_font_sizes/font_size = 24
text = "+"

[node name="Hit_Label3" type="Label" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.5)
offset_left = 26.0
offset_top = -25.0
offset_right = 66.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0v313")
theme_override_font_sizes/font_size = 9
text = "Âçê"

[node name="Miss_Label1" type="Label" parent="."]
offset_top = -29.0
offset_right = 40.0
theme_override_colors/font_color = Color(0, 0, 100, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_0v313")
theme_override_font_sizes/font_size = 11
text = "MISS"

[node name="Miss_Label2" type="Label" parent="."]
offset_left = 34.0
offset_top = -47.0
offset_right = 74.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 100, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_0v313")
theme_override_font_sizes/font_size = 23
text = "-"
